--- a/build.xml
+++ b/build.xml
@@ -15,7 +15,7 @@
 		<mkdir dir="bin/main"/>
 		<javac srcdir="src/main/java" destdir="bin/main" debug="true" nowarn="yes" source="1.6" target="1.6" encoding="utf8">
 			<classpath>
-				<fileset dir="bin/lib/main" includes="**/*.jar"/>
+				<fileset dir="bin/lib/default" includes="**/*.jar"/>
 			</classpath>
 		</javac>
 	</target>
@@ -23,9 +23,9 @@
 	<target name="jar" depends="compile" description="jar bin/main/ into bin/jtty.jar">
 		<jar destfile="bin/jtty.jar" manifest="src/main/resources/manifest.mf">
 			<fileset dir="bin/main" includes="**/*.class"/>
-			<zipfileset src="bin/lib/main/jars/jetty.jar" includes="**/*" />
-			<zipfileset src="bin/lib/main/jars/jetty-util.jar" includes="**/*" />
-			<zipfileset src="bin/lib/main/jars/servlet-api-2.5.jar" includes="**/*" />
+			<zipfileset src="bin/lib/default/jars/jetty.jar" includes="**/*" />
+			<zipfileset src="bin/lib/default/jars/jetty-util.jar" includes="**/*" />
+			<zipfileset src="bin/lib/default/jars/servlet-api-2.5.jar" includes="**/*" />
 		</jar>
 	</target>
 
