--- a/ivy.xml
+++ b/ivy.xml
@@ -1,12 +1,13 @@
 <ivy-module version="2.0" xmlns:m="http://ant.apache.org/ivy/maven">
 	<info organisation="exigence" module="jtty" revision="1.0"/>
 	<configurations>
-		<conf name="main"/>
+		<conf name="default"/>
+		<conf name="sources"/>
 	</configurations>
 	<publications>
-		<artifact name="jtty" type="jar" ext="jar" conf="main"/>
+		<artifact name="jtty" type="jar" ext="jar" conf="default"/>
 	</publications>
-	<dependencies>
-		<dependency org="org.mortbay.jetty" name="jetty" rev="6.1.9" conf="main->default,sources"/>
+	<dependencies defaultconfmapping="default->default;sources->sources">
+		<dependency org="org.mortbay.jetty" name="jetty" rev="6.1.9"/>
 	</dependencies>
 </ivy-module>
