--- a/ivy.xml
+++ b/ivy.xml
@@ -6,8 +6,13 @@
   </configurations>
   <publications>
     <artifact name="jtty" type="jar" ext="jar" conf="default"/>
+    <artifact name="jtty-jsp" type="jar" ext="jar" conf="default"/>
   </publications>
   <dependencies defaultconfmapping="default->default;sources->sources">
-    <dependency org="org.mortbay.jetty" name="jetty" rev="6.1.9"/>
+    <dependency org="org.mortbay.jetty" name="jetty" rev="6.1.21"/>
+    <dependency org="org.apache.tomcat" name="jasper" rev="6.0.20">
+      <exclude org="org.apache.tomcat" module="catalina" />
+      <exclude org="org.apache.tomcat" module="servlet-api" />
+    </dependency>
   </dependencies>
 </ivy-module>
