--- a/ivy.xml
+++ b/ivy.xml
@@ -9,7 +9,7 @@
     <artifact name="jtty-jsp" type="jar" ext="jar" conf="default"/>
   </publications>
   <dependencies defaultconfmapping="default->default;sources->sources">
-    <dependency org="org.mortbay.jetty" name="jetty" rev="6.1.21"/>
+    <dependency org="org.eclipse.jetty" name="jetty-webapp" rev="8.0.0.M1"/>
     <dependency org="org.apache.tomcat" name="jasper" rev="6.0.20">
       <exclude org="org.apache.tomcat" module="catalina" />
       <exclude org="org.apache.tomcat" module="servlet-api" />
