--- a/build.xml
+++ b/build.xml
@@ -23,7 +23,6 @@
   <target name="jar" depends="compile" description="jar bin/main/ into bin/jtty.jar">
     <jar destfile="bin/jtty.jar" manifest="src/main/resources/manifest.mf">
       <fileset dir="bin/main" includes="**/*.class"/>
-      <zipfileset src="bin/lib/default/jars/jetty-continuation.jar" includes="**/*" excludes="META-INF/*" />
       <zipfileset src="bin/lib/default/jars/jetty-http.jar" includes="**/*" excludes="META-INF/*" />
       <zipfileset src="bin/lib/default/jars/jetty-io.jar" includes="**/*" excludes="META-INF/*" />
       <zipfileset src="bin/lib/default/jars/jetty-security.jar" includes="**/*" excludes="META-INF/*" />
@@ -32,11 +31,10 @@
       <zipfileset src="bin/lib/default/jars/jetty-webapp.jar" includes="**/*" excludes="META-INF/*" />
       <zipfileset src="bin/lib/default/jars/jetty-xml.jar" includes="**/*" excludes="META-INF/*" />
       <zipfileset src="bin/lib/default/jars/jetty-util.jar" includes="**/*" excludes="META-INF/*" />
-      <zipfileset src="bin/lib/default/orbits/javax.servlet.jar" includes="**/*" excludes="META-INF/*" />
+      <zipfileset src="bin/lib/default/jars/javax.servlet-api.jar" includes="**/*" excludes="META-INF/*" />
     </jar>
     <jar destfile="bin/jttyp.jar" manifest="src/main/resources/manifest.mf">
       <fileset dir="bin/main" includes="**/*.class"/>
-      <zipfileset src="bin/lib/default/jars/jetty-continuation.jar" includes="**/*" excludes="META-INF/*" />
       <zipfileset src="bin/lib/default/jars/jetty-http.jar" includes="**/*" excludes="META-INF/*" />
       <zipfileset src="bin/lib/default/jars/jetty-io.jar" includes="**/*" excludes="META-INF/*" />
       <zipfileset src="bin/lib/default/jars/jetty-security.jar" includes="**/*" excludes="META-INF/*" />
@@ -45,7 +43,7 @@
       <zipfileset src="bin/lib/default/jars/jetty-webapp.jar" includes="**/*" excludes="META-INF/*" />
       <zipfileset src="bin/lib/default/jars/jetty-xml.jar" includes="**/*" excludes="META-INF/*" />
       <zipfileset src="bin/lib/default/jars/jetty-util.jar" includes="**/*" excludes="META-INF/*" />
-      <zipfileset src="bin/lib/default/orbits/javax.servlet.jar" includes="**/*" excludes="META-INF/*" />
+      <zipfileset src="bin/lib/default/jars/javax.servlet-api.jar" includes="**/*" excludes="META-INF/*" />
       <zipfileset src="bin/lib/default/jars/el-api.jar" includes="**/*" excludes="META-INF/*" />
       <zipfileset src="bin/lib/default/jars/jasper.jar" includes="**/*" excludes="META-INF/*" />
       <zipfileset src="bin/lib/default/jars/jasper-el.jar" includes="**/*" excludes="META-INF/*" />
